# cxx-bootstrap

./: .gitignore  CMakeLists.txt  Makefile  README.md  bootstrap.cpp  cxx-qanda.md  execute_test
etc/: create_project.sh  install_all.sh  install_libbson.sh  install_libmongocrypt.sh  install_mongo_c_driver.sh  install_mongo_cxx_driver.sh
investigations/: help20788-2.cpp  help20788.cpp  help20788.sh  initializer_list_constructor.cpp
investigations/CXX-2579_test_rpath_to_cxxdriver/: CMakeLists.txt  app.cpp  build-with-pkgconfig.sh  build.sh  configure.sh  test-linux.sh  test-macos.sh
investigations/CXX-2705/: CMakeLists.txt  main.cpp
investigations/CXX-2748/: CMakeLists.txt  configure.sh  main.cpp
investigations/CXX-3291/: test-installs.ps1
investigations/CXX2652/: CMakeLists.txt  build-g++4.8.5.sh  build-g++7.3.0.sh  configure-g++4.8.5.sh  configure-g++7.3.0.sh  debug-g++7.3.0.gdb  main.cpp  run-g++4.8.5.sh  run-g++7.3.0.sh
investigations/DOCSP-42150/: CMakeLists.txt  configure.sh  main.cpp  run.sh
investigations/HELP-43494/: CMakeLists.txt  configure.sh  main.cpp
investigations/HELP-56783/: Dockerfile  README.md  build.sh  kill-one-mongos.sh  repro.cpp  run.sh  stop-container.sh  test-repeatedly.sh
investigations/HELP-58977/: README.md  build.sh  kill-one-mongod.sh  repro.cpp  run.sh
investigations/HELP-90232/: README.md  offline-install.md
investigations/apm_example/: CMakeLists.txt  configure.sh  main.cpp  run.sh
investigations/atlas-streams-changestreams/: CMakeLists.txt  (+2 more)
investigations/batch_size_0/: CMakeLists.txt  capture_cursor_id.cpp  main.cpp  run.sh  test-pymongo.py
investigations/help30888/: CMakeLists.txt  README.md  configure.sh  copy-dlls.sh  crepro.c  main.cpp  python_test.py  run.sh
investigations/homebrew-mnmlstc/: CMakeLists.txt  install.sh  test-with-cmake.sh  test-with-pkgconfig.sh  test.cpp
ping/: CMakeLists.txt  configure.sh
util/: util.cpp  util.hpp
x509gen/: README.md
(+55 files in other folders)
